--- a/product-management-app/package.json
+++ b/product-management-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd-mobile": "^5.36.0",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0",
